Fix expanded and collapse
* Remove border radius from open comments
* Fix position of comments in grid view
* Add expanded and text to post object

--- a/app/assets/css/scss/modules/_post-grid.scss
+++ b/app/assets/css/scss/modules/_post-grid.scss
@@ -23,9 +23,20 @@
       }
     }
   }
+
+  .comments {
+    .post_content_meta--grid {
+      width: 100%;
+    }
+    .post_content_meta_actions {
+      float: right;
+      width: 100%;
+    }
+  }
+
 }
 
-.post__content_meta--grid {
+.post_content_meta--grid {
   float: right;
   width: calc(100% - 57px);
   margin-bottom: em(-7);
